--- a/site/multisite/chimeraland/chimeraland/package.json
+++ b/site/multisite/chimeraland/chimeraland/package.json
@@ -34,7 +34,7 @@
     "@types/gulp": "^4.0.10",
     "@types/node": "^20.1.0",
     "@types/through2": "https://github.com/dimaslanjaka/nodejs-package-types/tarball/through2",
-    "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/tarball/5560156be9745d682c7a5e727cffeee0b0179ab1",
+    "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/5560156/release/cross-spawn.tgz",
     "npm-run-all": "^4.1.5"
   }
 }
