--- a/site/multisite/chimeraland/package.json
+++ b/site/multisite/chimeraland/package.json
@@ -76,13 +76,13 @@
     "@typescript-eslint/parser": "^5.59.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/tarball/5560156be9745d682c7a5e727cffeee0b0179ab1",
+    "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/5560156/release/cross-spawn.tgz",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "express": "^4.18.2",
-    "git-command-helper": "^1.2.2",
+    "git-command-helper": "^1.2.3",
     "gulp": "^4.0.2",
     "gulp-dom": "https://github.com/dimaslanjaka/static-blog-generator-hexo/raw/master/packages/gulp-dom/release/gulp-dom.tgz",
     "hexo-post-parser": "^1.2.9",
