--- a/site/multisite/chimeraland/package.json
+++ b/site/multisite/chimeraland/package.json
@@ -30,7 +30,8 @@
     "@google-cloud/local-auth": "^2.1.1",
     "@googleapis/docs": "^2.0.1",
     "ansi-colors": "^4.1.3",
-    "axios": "^1.4.0",
+    "axios": "1",
+    "axios-cache-interceptor": "1",
     "bluebird": "^3.7.2",
     "debug": "^4.3.4",
     "decode-uri-component": "^0.4.1",
@@ -40,6 +41,7 @@
     "googleapis": "^118.0.0",
     "i18n": "^0.15.1",
     "js-yaml": "^4.1.0",
+    "jsdom": "21",
     "lodash": "^4.17.21",
     "minimatch": "^9.0.1",
     "moment": "^2.29.4",
@@ -64,6 +66,7 @@
     "@types/gulp": "^4.0.10",
     "@types/i18n": "^0.13.6",
     "@types/imagemin": "^8.0.1",
+    "@types/jsdom": "^21",
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.2.3",
     "@types/nunjucks": "^3.2.2",
