--- a/site/multisite/chimeraland/tsconfig.json
+++ b/site/multisite/chimeraland/tsconfig.json
@@ -9,8 +9,13 @@
     "allowJs": true,
     "checkJs": false,
     "noEmit": true,
+    "strict": true,
     "jsx": "react-jsx",
-    "lib": ["DOM", "DOM.Iterable", "ES2016"]
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2016"
+    ]
   },
   "include": [
     "chimeraland",
@@ -20,5 +25,8 @@
     "sync",
     "build.ts"
   ],
-  "exclude": ["**/node_modules", "**/tmp"]
+  "exclude": [
+    "**/node_modules",
+    "**/tmp"
+  ]
 }
