--- a/site/multisite/chimeraland/package.json
+++ b/site/multisite/chimeraland/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^11.1.1",
     "glob": "^10.2.6",
     "googleapis": "^123.0.0",
+    "html-minifier-terser": "^7.2.0",
     "i18n": "^0.15.1",
     "js-yaml": "^4.1.0",
     "jsdom": "21",
@@ -63,6 +64,7 @@
     "@types/bluebird": "^3.5.38",
     "@types/fs-extra": "^11.0.1",
     "@types/gulp": "^4.0.10",
+    "@types/html-minifier-terser": "^7",
     "@types/i18n": "^0.13.6",
     "@types/imagemin": "^8.0.1",
     "@types/jsdom": "^21",
